--- a/BackEnd/Task_Backend/src/main/resources/application.properties
+++ b/BackEnd/Task_Backend/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-#changing the server port
-server.port=8888
-#db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/task
+
+
+
+
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:task}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=India@4444
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:root}
+
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-
-
-#Swagger specific properties
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
