--- a/BackEnd/Task_Backend/src/main/resources/application.properties
+++ b/BackEnd/Task_Backend/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.password=${DB_PASSWORD:root}
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+logging.level.org.springframework.web: trace
+logging.level.org.apache: trace
